--- a/Mememe_V1/Base.lproj/Main.storyboard
+++ b/Mememe_V1/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Mememe_V1" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +17,36 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jRL-ZS-8Ph">
+                                <rect key="frame" x="12" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Pick" id="X9Y-9W-4lO">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="UR5-nE-s8I"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x0e-MD-DoO">
+                                <rect key="frame" x="169" y="200" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jRL-ZS-8Ph" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-8" id="0ci-sG-rSN"/>
+                            <constraint firstItem="jRL-ZS-8Ph" firstAttribute="top" secondItem="x0e-MD-DoO" secondAttribute="bottom" constant="230" id="805-aO-Ytk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jRL-ZS-8Ph" secondAttribute="trailing" constant="-32" id="D5w-El-WB7"/>
+                            <constraint firstItem="x0e-MD-DoO" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="178" id="GVK-Ce-uVz"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jRL-ZS-8Ph" secondAttribute="bottom" id="GVh-t2-lEY"/>
+                            <constraint firstItem="jRL-ZS-8Ph" firstAttribute="top" secondItem="x0e-MD-DoO" secondAttribute="bottom" constant="230" id="Vz0-nd-zMs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="x0e-MD-DoO" secondAttribute="trailing" constant="171" id="cbK-BF-0qM"/>
+                            <constraint firstItem="x0e-MD-DoO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="149" id="lUk-yR-mpn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="x0e-MD-DoO" id="Zha-Rx-HWD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
